--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,5 +1,9 @@
 name: "Schengen Slot Watcher (Multi-Country)"
 
+# Grant write permission so GITHUB_TOKEN can push last_state files into a private repo
+permissions:
+  contents: write
+
 on:
   schedule:
     # Every 45 minutes
@@ -10,17 +14,16 @@ jobs:
   watch_slots:
     runs-on: ubuntu-latest
 
-    # Use a matrix to run the same steps for both 'dubai' and 'abu-dhabi'
     strategy:
       matrix:
         city: ["dubai", "abu-dhabi"]
 
     steps:
-      # 1) Checkout the repository
+      # 1) Checkout the repository (persist-credentials: true so we can push)
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true   # needed for pushing last_state files
+          persist-credentials: true
 
       # 2) Set up Python and install pip dependencies
       - name: Set up Python & Install Python deps
@@ -66,20 +69,23 @@ jobs:
           CITY_SLUG: ${{ matrix.city }}
           VISA_TYPE: "tourism"
 
-      # 6) (Optional) Debug Show rendered_<city>.html snippet
+      # 6) (Optional) Debug Show rendered_<city>.html snippet (only if file exists)
       - name: Debug Show rendered_${{ matrix.city }}.html snippet
         if: always()
         run: |
-          echo "----- BEGIN rendered_${{ matrix.city }}.html (lines 1–40) -----"
-          head -n 40 rendered_${{ matrix.city }}.html
-          echo "------ END rendered_${{ matrix.city }}.html ------"
+          if [ -f rendered_${{ matrix.city }}.html ]; then
+            echo "----- BEGIN rendered_${{ matrix.city }}.html (lines 1–40) -----"
+            head -n 40 rendered_${{ matrix.city }}.html
+            echo "------ END rendered_${{ matrix.city }}.html ------"
+          else
+            echo "rendered_${{ matrix.city }}.html not found; skipping debug snippet."
+          fi
 
-      # 7) Run the Python checker for this city (uses rendered_<city>.html & a city-specific state file)
+      # 7) Run the Python checker for this city (uses rendered_<city>.html & city-specific state file)
       - name: Run Schengen slot checker for ${{ matrix.city }}
         env:
           CITY_SLUG:        ${{ matrix.city }}
           VISA_TYPE:        "tourism"
-          # Now pass a comma-separated list of countries:
           TARGET_COUNTRIES: "Italy,Luxembourg"
           TELEGRAM_TOKEN:   ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID:          ${{ secrets.CHAT_ID }}
