--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -88,7 +88,7 @@ jobs:
           CITY_SLUG:        ${{ matrix.city }}
           VISA_TYPE:        "tourism"
           # ← Here you list all countries you want to track, comma-separated:
-          TARGET_COUNTRIES: "Italy,Luxembourg"
+          TARGET_COUNTRIES: "Italy,Norway"
           TELEGRAM_TOKEN:   ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID:          ${{ secrets.CHAT_ID }}
           STATE_FILE:       "last_state_${{ matrix.city }}.json"
